faz alteração nas classes e adiciona persistência de dados em arquivo

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ src/main/resources/private/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# arquivos javas que não estou usando
+MinhaJanela.java
+
+# arquivos binários
+*.bin
